# nvim-remix

./: .gitignore  README.md
lua/: remix.lua
plugin/: nvim_remix.lua
remix/: Cargo.toml
remix/remix-solidity/: Cargo.toml
remix/remix-solidity/resources/: wrong.txt
remix/remix-solidity/src/: error.rs  lib.rs
remix/src/: lib.rs  notify.rs
tests/nvim_remix/: nvim_remix_spec.lua
